<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".locationreminder.ReminderDescriptionActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_normal"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/detail_title" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="@+id/title_textview"
        app:layout_constraintTop_toBottomOf="@+id/title_textview"
        tools:text="@string/detail_description" />

    <TextView
        android:id="@+id/location_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="@+id/description_textView"
        app:layout_constraintTop_toBottomOf="@+id/description_textView"
        tools:text="@string/detail_location" />

    <TextView
        android:id="@+id/coordinates_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="@+id/location_textView"
        app:layout_constraintTop_toBottomOf="@+id/location_textView"
        tools:text="@string/lat_long_snippet"/>
</LinearLayout>
